# CaligraphieAiTracer

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: cd.yml  ci.yml
ordre_de_mission/: CONTEXTE.md  OPTIMISATION.md  PLAN.md
scripts/: package.ps1  send_job.py
src/: app.rs  brush.rs  config.rs  fonts.rs  glyph.rs  main.rs  recorder.rs  server.rs  simulator.rs  stroke.rs
