[package]
name = "calligraphie_ai_tracer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33", features = ["default"] }
egui = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.9"
ttf-parser = "0.25"
ureq = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
